# blog

./: .editorconfig  .gitignore  CNAME  Gemfile  Guardfile  _config.yml  about.html  index.html
_drafts/: constraints_liberate.md
_includes/: footer.html  head.html  header.html  logo.html  mathjax.html
_layouts/: about.html  list.html  page.html  post.html
_posts/: 2015-03-26-blog-init.md  2016-03-25-another-post.md  2016-03-25-welcome-to-jekyll.markdown  2016-03-26-where-it-all-begins.md  2016-04-03-it-all-begins.md  2017-02-26-what-is-a-functor-anyway.md
_sass/: _base.scss  _layout.scss  _page.scss  _syntax-highlighting.scss
_site/: feed.xml  index.html
_site/about/: index.html
blog/: Guardfile  _config.yml  about.html  archive.html  feed.xml  index.html
blog/_includes/: footer.html
blog/_posts/: 2017-10-02-what-is-a-functor-anyway.md
blog/_sass/: _about.scss  _base.scss
blog/about/: index.html
blog/css/: default.css  main.css  syntax.css
blog/posts/: 2017-10-02-what-is-a-functor-anyway.html  2018-12-26-asm-minimalism.html  2018-12-31-assembling-noop.html  2019-01-16-assembling-fizz-buzz.html  2019-04-26-law-of-excluded-middle.html  2020-10-26-syscalls-at-assembly-level.html  2021-02-08-new-in-scala3.html  (+10 more)
css/: main.scss
hakyll/: README.md  about.html  blog.cabal  cabal.project.freeze  hakyll.cabal  site.hs  stack.yaml  test.html
jekyll/: CNAME  Gemfile  Guardfile  Procfile  _config.yml  about.html
lab/benchmark-haskell/: Bench.hs  Main.hs  Swaps.hs  SwapsGrig.hs  bench.cabal
lab/coding-in-haskell/: Main.hs  coding-in-haskell.cabal
(+157 files in other folders)
