cabal-version:       2.4
name:                bench
version:             0.1.0.0
build-type:          Simple

common shared
  build-depends:       base >=4.13 && <4.14,
                       array,
                       split,
                       containers
  default-language:    Haskell2010

executable exe
  import:              shared
  main-is:             Main.hs
  other-modules:       Swaps, SwapsGrig

benchmark bench
  import:       shared
  type:       exitcode-stdio-1.0
  main-is:    Bench.hs
  other-modules:       Swaps, SwapsGrig
  build-depends: criterion, random-shuffle