cabal-version:       >=1.10
name:                coding-in-haskell
version:             0.1.0.0
build-type:          Simple

executable coding-in-haskell
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14,
                       array,
                       split,
                       containers
  default-language:    Haskell2010
